--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -63,6 +63,7 @@
                     {% else %}
                         <li><a href="javascript:void(0)">Hello, {{ request.user.primernombre }}<span></span></a>
                             <ul>
+{#                            <li><a href="/profile/"><i class="fa fa-user"></i> My Profile</a></li>#}
                                 {% if request.user.get_perfil_adm %}
                                     <li><a href="/panel/"><i class="fa fa-lock"></i> Administration</a></li>
                                 {% endif %}
