--- a/landing/templates/conference/conference_fee/listado.html
+++ b/landing/templates/conference/conference_fee/listado.html
@@ -37,7 +37,7 @@
                         <div class="panel panel-inverse">
                             <div class="panel-body">
                                 <div class="flex-container">
-                                    <h3><i class="fa fa-list-ol"></i> {{ l.get_role_display }} <i class="{{ l.get_public }}"></i>
+                                    <h3><i class="fa fa-list-ol"></i> {{ l.get_role_display }} {% if l.special_price %} (SPECIAL PRICE){% endif %} <i class="{{ l.get_public }}"></i>
                                     </h3>
                                     <div class="text-texto">
                                         <div class="btn-group mb-3">
@@ -60,6 +60,10 @@
                                     </div>
                                 </div>
                                 <div class="">
+                                    {% if l.special_price %}
+                                        <span class="text-primary"><i class="fa fa-info-circle"></i> This fee has been designated as a special price for sponsor universities.</span>
+                                        <br>
+                                    {% endif %}
                                     <span><b>Total Price:</b> $ {{ l.value }}</span>
                                 </div>
                                 <table class="table">
