--- a/static/views.css
+++ b/static/views.css
@@ -28,3 +28,17 @@ body {
 .mt-125 {
     margin-top: 125px;
 }
+
+.mt-0 {
+    margin-top: 0 !important;
+}
+
+.mt-125 {
+    margin-top: 125px !important;
+}
+
+@media (min-width: 992px) {
+    .mt-lg-125 {
+        margin-top: 125px !important;
+    }
+}
